Use built CAS overlay/config, seems to work